# Contact-List-Consolidation

./: .gitignore  README.md  STREAMLIT_APP_GUIDE.md  constants.py  master_orchestrator.py  pyproject.toml  requirements.txt  run_pipeline.py  streamlit_app.py  test_new_agent_pipeline.py
DataSource/: Naresh Sales connections 08022021.xlsx  World Summit Speaker List.xlsx
output/agent_1_file_converter/: Copy of Copy of Naresh Contacts 2025_All Contacts.csv  Copy of Copy of Naresh Contacts 2025_Amazon Email.csv  Copy of Copy of Naresh Contacts 2025_Amazon.csv  Copy of Copy of Naresh Contacts 2025_Bay area Leads -Salesforce.csv  Copy of Copy of Naresh Contacts 2025_CVS Health Corporation.csv  Copy of Copy of Naresh Contacts 2025_Priyas List.csv  Copy of Copy of Naresh Contacts 2025_Report.csv  Copy of Copy of Naresh Contacts 2025_Seamless -AMazon.csv  Copy of Copy of Naresh Contacts 2025_contacts with email.csv  Copy of Copy of Naresh Contacts 2025_stephen Leads.csv  agent_1_verification_report.json
output/agent_2_column_mapper/: agent_2_verification_report.json  analysis_Copy of Copy of Naresh Contacts 2025_All Contacts.json  analysis_Copy of Copy of Naresh Contacts 2025_Amazon Email.json  analysis_Copy of Copy of Naresh Contacts 2025_Amazon.json  analysis_Copy of Copy of Naresh Contacts 2025_Bay area Leads -Salesforce.json  analysis_Copy of Copy of Naresh Contacts 2025_CVS Health Corporation.json  analysis_Copy of Copy of Naresh Contacts 2025_Priyas List.json  analysis_Copy of Copy of Naresh Contacts 2025_Report.json  analysis_Copy of Copy of Naresh Contacts 2025_Seamless -AMazon.json  analysis_Copy of Copy of Naresh Contacts 2025_contacts with email.json  analysis_Copy of Copy of Naresh Contacts 2025_stephen Leads.json  analyzed_Copy of Copy of Naresh Contacts 2025_All Contacts.csv  analyzed_Copy of Copy of Naresh Contacts 2025_Amazon Email.csv  analyzed_Copy of Copy of Naresh Contacts 2025_Amazon.csv  (+7 more)
tasks/: __init__.py  base_task.py  column_mapper_agent_task.py  csv_cleaner_crm_exporter_task.py  data_consolidator_agent_task.py  file_converter_task.py  smart_deduplicator_agent_task.py  web_scraper_agent_task.py
utils/: __init__.py  advanced_optimizations_2025.py  ai_agent_core.py  column_mapper.py  data_consolidator.py  duckduckgo_search_agent.py  export_formatter.py  performance_monitor.py
(+3 files in other folders)
