[project]
name = "contact-consolidation-pipeline"
version = "1.0.0"
description = "AI-powered contact consolidation and enrichment pipeline with 5-agent architecture"
authors = [
    {name = "Yashwanth Reddy", email = "yash@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    
    # AI and ML
    "ollama>=0.1.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    
    # Web scraping and search
    "duckduckgo-search>=4.0.0",
    "fake-useragent>=1.4.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Data processing and deduplication
    "rapidfuzz>=3.5.0",
    "scikit-learn>=1.3.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    
    # Utilities
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    
    # Performance monitoring
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
contact-pipeline = "enhanced_pipeline_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=tasks --cov=utils --cov-report=term-missing" 